Insert Update Delete with LocalDB

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,8 @@
     }
   },
   "AllowedHosts": "*",
+  // if can't run change -2 to -1
   "ConnectionStrings": {
-    "MvcMovieContext": "Server=(localdb)\\mssqllocaldb;Database=MvcMovieContext-1;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MvcMovieContext": "Server=(localdb)\\mssqllocaldb;Database=MvcMovieContext-2;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
